Add: function for difficulty level WIP

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="container">
         <div class="wrapper">
+            <form action="">
+                <select name="difficulty" id="difficultyLevel">
+                    <option value="easy"> Just the Story!  </option>
+                    <option value="medium"> Blood and Broken Bones! </option>
+                    <option value="hard"> Death March! </option>
+                </select>
+            </form>
             <button class="startGame" id="btn">Play</button>
         </div>
         <div class="row">
